<resources>
    <string name="app_name">EasyRTC</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="roomNumber">房间号</string>
    <string name="call">进入</string>
    <string name="hangup">退出</string>
    <string name="speaker">扬声器</string>
    <string name="userinfo">用户</string>
    <string name="connecting">连接中</string>
    <string name="disconnecting">退出中</string>
    <string name="user_id">账号</string>
    <string name="user_password">密码</string>
</resources>
