<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyrtc.venustest.MainActivity"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="80dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="EasyRTC"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="bottom">
        <TextView android:text="@string/username"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="android" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="bottom">
        <TextView android:text="@string/email"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="android@hfmtx.com" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView android:text="@string/user_id"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/userIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView android:text="@string/user_password"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/userPasswordEditText"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView android:text="@string/roomNumber"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/roomNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3581" />
    </LinearLayout>

    <Button android:id="@+id/call"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />

</LinearLayout>
