<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyrtc.venustest.com.easydarwin.easyrtc.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!--
    <TextView android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <ListView android:id="@+id/userList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2C2C2C">
        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/remote_video_view"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true" />

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/local_video_view"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <Button android:id="@+id/hangup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangup" />

        <Button android:id="@+id/speakerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaker" />

        <Button android:id="@+id/userInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userinfo" />
    </LinearLayout>

</RelativeLayout>
